Cambios menores a footer

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -64,7 +64,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="container-fluid d-flex flex-column" id="footer-body">
     <div class="row mb-0 p-5 d-flex flex-row align-items-center" id="footer-content">
       <div class="col-lg-3 col-md-8" id="copyrigth">
@@ -84,17 +83,19 @@
         <a href="https://www.facebook.com/profile.php?id=61551363476187" class="text-decoration-none mb-1">Facebook</a>
         <a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1" class="text-decoration-none mb-1">TikTok</a>
       </div>
-      <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
+      <div class="col-lg-2 d-none d-md-none d-lg-flex  text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Enlaces</span>
         <a href="" class="text-decoration-none mb-1">Catalogo</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
-        <a href="" class="text-decoration-none mb-1">Enlace 3</a>
+        <a href="" class="text-decoration-none mb-1">Pedidos & Entregas</a>
+        <a href="" class="text-decoration-none mb-1">Formulario de Contacto</a>
+
       </div>
       <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Contacto</span>
         <a href="" class="text-decoration-none mb-1">Whatsapp</a>
         <a href="" class="text-decoration-none mb-1">Correo electronico</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
+        <a href="" class="text-decoration-none mb-1">Soporte</a>
+
       </div>
     </div>
   </footer>
