--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -5,7 +5,8 @@
   <!--Etiquetas Meta-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="CraftMania - Personalización para Celebraciones Únicas. Encuentra servicios de sublimación, papelería personalizada, vinilos y más para tus eventos especiales.">
+  <meta name="description"
+    content="CraftMania - Personalización para Celebraciones Únicas. Encuentra servicios de sublimación, papelería personalizada, vinilos y más para tus eventos especiales.">
   <meta name="keywords" content="CraftMania, personalización, sublimación, papelería, vinilos, celebraciones">
   <!--Enlaces a archivos locales-->
   <link rel="stylesheet" href="../main.css">
@@ -13,8 +14,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <title>CraftMania - Catálogo de Servicios</title>
-  </head>
+  <title>CraftMania - Catálogo de Servicios</title>
+</head>
 
 <body>
   <!----------Encabezado, otros & Barra de Navegación---------->
@@ -46,7 +47,9 @@
         <div class="col-12">
           <div class="section-title text-center mb-4 pb-2">
             <h1 class="title mb-2">Catálogo de Servicios</h1>
-            <p class="text-muted para-desc mx-auto mb-0">Nuestra prioridad es garantizar la sensación de personalización. Explora nuestra gama de servicios de alta calidad diseñados para satisfacer tus necesidades.</p>
+            <p class="text-muted para-desc mx-auto mb-0">Nuestra prioridad es garantizar la sensación de
+              personalización. Explora nuestra gama de servicios de alta calidad diseñados para satisfacer tus
+              necesidades.</p>
           </div>
         </div>
         <!-- Tarjeta 1 -->
@@ -55,7 +58,8 @@
             <img src="../assets/sublimationMainImage.png" class="card-img-top img-fluid" alt="Título del Servicio 1">
             <div class="card-body">
               <h5 class="card-title fw-bold">Sublimación</h5>
-              <p class="card-text">Sublima tus prendas textiles, acrilicos o tazas con materiales DTF o tintas de sublimación</p>
+              <p class="card-text">Sublima tus prendas textiles, acrilicos o tazas con materiales DTF o tintas de
+                sublimación</p>
               <!-- Agrega aquí cualquier otro contenido relevante, como un botón para obtener más información o un precio. -->
             </div>
           </div>
@@ -66,7 +70,8 @@
             <img src="../assets/crafting-papeleria.png" class="card-img-top" alt="Título del Servicio 2">
             <div class="card-body">
               <h5 class="card-title fw-bold">Papeleria Personalizada</h5>
-              <p class="card-text">Personalizamos empaques, etiquetas y más para tus eventos. ¡Imagina un empaque con tu rostro!</p>
+              <p class="card-text">Personalizamos empaques, etiquetas y más para tus eventos. ¡Imagina un empaque con tu
+                rostro!</p>
               <!-- Agrega aquí cualquier otro contenido relevante, como un botón para obtener más información o un precio. -->
             </div>
           </div>
@@ -84,7 +89,7 @@
         </div>
       </div>
     </section>
-    
+
 
 
   </main>
@@ -112,15 +117,15 @@
       <div class="col-lg-2 d-none d-md-none d-lg-flex  text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Enlaces</span>
         <a href="" class="text-decoration-none mb-1">Catalogo</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
-        <a href="" class="text-decoration-none mb-1">Enlace 3</a>
+        <a href="" class="text-decoration-none mb-1">Pedidos & Entregas</a>
+        <a href="" class="text-decoration-none mb-1">Formulario de Contacto</a>
 
       </div>
       <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Contacto</span>
         <a href="" class="text-decoration-none mb-1">Whatsapp</a>
         <a href="" class="text-decoration-none mb-1">Correo electronico</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
+        <a href="" class="text-decoration-none mb-1">Soporte</a>
 
       </div>
     </div>
