--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,8 @@
       <div class="row">
         <div class="col-12 text-center">
           <h1>Contáctanos</h1>
-          <p>Estamos interesados en escucharte. Déjanos tus comentarios, sugerencias o solicita información por medio de este formulario</p>
+          <p>Estamos interesados en escucharte. Déjanos tus comentarios, sugerencias o solicita información por medio de
+            este formulario</p>
         </div>
         <div class="col-lg-8 col-md-10 col-sm-12 mx-auto mt-4">
           <!-- Formulario -->
@@ -64,13 +65,15 @@
               <div class="col-12">
                 <div class="inputField">
                   <label for="motivoMensaje" class="input-label">Motivo de Mensaje</label>
-                  <input type="text" id="motivoMensaje" class="form-control" placeholder="¿Una sugerencia, una cotización o un simple comentario?">
+                  <input type="text" id="motivoMensaje" class="form-control"
+                    placeholder="¿Una sugerencia, una cotización o un simple comentario?">
                 </div>
               </div>
               <div class="col-12">
                 <div class="inputField">
                   <label for="descripMensaje" class="input-label">Descripción del Mensaje</label>
-                  <textarea rows="4" class="form-control" placeholder="Tu momento ha llegado. ¿Qué quieres decirnos?"></textarea>
+                  <textarea rows="4" class="form-control"
+                    placeholder="Tu momento ha llegado. ¿Qué quieres decirnos?"></textarea>
                 </div>
               </div>
               <div class="col-12 text-center">
@@ -81,7 +84,7 @@
         </div>
       </div>
     </section>
-    
+
 
   </main>
 
@@ -107,15 +110,15 @@
       <div class="col-lg-2 d-none d-md-none d-lg-flex  text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Enlaces</span>
         <a href="" class="text-decoration-none mb-1">Catalogo</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
-        <a href="" class="text-decoration-none mb-1">Enlace 3</a>
+        <a href="" class="text-decoration-none mb-1">Pedidos & Entregas</a>
+        <a href="" class="text-decoration-none mb-1">Formulario de Contacto</a>
 
       </div>
       <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Contacto</span>
         <a href="" class="text-decoration-none mb-1">Whatsapp</a>
         <a href="" class="text-decoration-none mb-1">Correo electronico</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
+        <a href="" class="text-decoration-none mb-1">Soporte</a>
 
       </div>
     </div>
