--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
       <div class="col-lg-2 d-none d-md-none d-lg-flex  text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Enlaces</span>
         <a href="" class="text-decoration-none mb-1">Catalogo</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
-        <a href="" class="text-decoration-none mb-1">Enlace 3</a>
+        <a href="" class="text-decoration-none mb-1">Entregas & Pedidos</a>
+        <a href="" class="text-decoration-none mb-1">Formulario de Contacto</a>
 
       </div>
       <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
         <span class="mb-2 fw-bold fs-5">Contacto</span>
         <a href="" class="text-decoration-none mb-1">Whatsapp</a>
         <a href="" class="text-decoration-none mb-1">Correo electronico</a>
-        <a href="" class="text-decoration-none mb-1">Pedidos</a>
+        <a href="" class="text-decoration-none mb-1">Soporte</a>
 
       </div>
     </div>
