--- a/pages/orderprocess.html
+++ b/pages/orderprocess.html
@@ -110,7 +110,8 @@
                                     recordar que se realizan un máximo de dos propuestas de las cuales, una de ellas,
                                     siendo
                                     esta la
-                                    seleccionada, será adaptada al resto de formatos.</p>
+                                    seleccionada, será adaptada al resto de formatos.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -119,15 +120,13 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="container-fluid d-flex flex-column" id="footer-body">
         <div class="row mb-0 p-5 d-flex flex-row align-items-center" id="footer-content">
             <div class="col-lg-3 col-md-8" id="copyrigth">
                 <div class="footer-left-section"> <img src="../assets/logo-positivo.png"
                         alt="Craftmania Logo Versión Positiva" class="img-fluid mb-3" id="footer-logo">
-                    <p class="text-light fw-light">Todas las imágenes, textos, gráficos y otros elementos de este sitio
-                        web
-                        están protegidos por las <strong>leyes de derechos de autor y otras leyes de propiedad
+                    <p class="text-light fw-light">Todas las imágenes, textos, gráficos y otros elementos de este
+                        sitio web están protegidos por las <strong>leyes de derechos de autor y otras leyes de propiedad
                             intelectual</strong>.
                         Queda estrictamente prohibida la reproducción, distribución, o modificación de cualquier parte
                         de
@@ -144,17 +143,19 @@
                 <a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1"
                     class="text-decoration-none mb-1">TikTok</a>
             </div>
-            <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
+            <div class="col-lg-2 d-none d-md-none d-lg-flex  text-light d-flex flex-column justify-content-start">
                 <span class="mb-2 fw-bold fs-5">Enlaces</span>
                 <a href="" class="text-decoration-none mb-1">Catalogo</a>
-                <a href="" class="text-decoration-none mb-1">Pedidos</a>
-                <a href="" class="text-decoration-none mb-1">Enlace 3</a>
+                <a href="" class="text-decoration-none mb-1">Pedidos & Entregas</a>
+                <a href="" class="text-decoration-none mb-1">Formulario de Contacto</a>
+
             </div>
             <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
                 <span class="mb-2 fw-bold fs-5">Contacto</span>
                 <a href="" class="text-decoration-none mb-1">Whatsapp</a>
                 <a href="" class="text-decoration-none mb-1">Correo electronico</a>
-                <a href="" class="text-decoration-none mb-1">Pedidos</a>
+                <a href="" class="text-decoration-none mb-1">Soporte</a>
+
             </div>
         </div>
     </footer>
